syntax = "proto3";
package virtengine.encryption.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos_proto/cosmos.proto";
import "virtengine/encryption/v1/types.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/encryption/v1";

// Query defines the gRPC querier service for the encryption module
service Query {
  // RecipientKey returns the recipient keys for an account
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc RecipientKey(QueryRecipientKeyRequest) returns (QueryRecipientKeyResponse) {
    option (google.api.http).get = "/virtengine/encryption/v1/key/{address}";
  }

  // KeyByFingerprint returns a key by its fingerprint
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc KeyByFingerprint(QueryKeyByFingerprintRequest) returns (QueryKeyByFingerprintResponse) {
    option (google.api.http).get = "/virtengine/encryption/v1/fingerprint/{fingerprint}";
  }

  // Params returns the module parameters
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/virtengine/encryption/v1/params";
  }

  // Algorithms returns the supported encryption algorithms
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc Algorithms(QueryAlgorithmsRequest) returns (QueryAlgorithmsResponse) {
    option (google.api.http).get = "/virtengine/encryption/v1/algorithms";
  }

  // ValidateEnvelope validates an encrypted payload envelope
  // buf:lint:ignore RPC_REQUEST_RESPONSE_UNIQUE
  // buf:lint:ignore RPC_RESPONSE_STANDARD_NAME
  rpc ValidateEnvelope(QueryValidateEnvelopeRequest) returns (QueryValidateEnvelopeResponse) {
    option (google.api.http).post = "/virtengine/encryption/v1/validate";
  }
}

// QueryRecipientKeyRequest is the request for querying a recipient's public key
message QueryRecipientKeyRequest {
  // Address is the account address to query
  string address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "address",
    (gogoproto.moretags) = "yaml:\"address\""
  ];
}

// QueryRecipientKeyResponse is the response for QueryRecipientKeyRequest
message QueryRecipientKeyResponse {
  // Keys is the list of recipient key records
  repeated RecipientKeyRecord keys = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "keys",
    (gogoproto.moretags) = "yaml:\"keys\""
  ];
}

// QueryKeyByFingerprintRequest is the request for querying a key by fingerprint
message QueryKeyByFingerprintRequest {
  // Fingerprint is the key fingerprint to look up
  string fingerprint = 1 [
    (gogoproto.jsontag) = "fingerprint",
    (gogoproto.moretags) = "yaml:\"fingerprint\""
  ];
}

// QueryKeyByFingerprintResponse is the response for QueryKeyByFingerprintRequest
message QueryKeyByFingerprintResponse {
  // Key is the recipient key record
  RecipientKeyRecord key = 1 [
    (gogoproto.jsontag) = "key",
    (gogoproto.moretags) = "yaml:\"key\""
  ];
}

// QueryParamsRequest is the request for querying module parameters
message QueryParamsRequest {}

// QueryParamsResponse is the response for QueryParamsRequest
message QueryParamsResponse {
  // Params are the module parameters
  Params params = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "params",
    (gogoproto.moretags) = "yaml:\"params\""
  ];
}

// QueryAlgorithmsRequest is the request for querying supported algorithms
message QueryAlgorithmsRequest {}

// QueryAlgorithmsResponse is the response for QueryAlgorithmsRequest
message QueryAlgorithmsResponse {
  // Algorithms is the list of supported algorithm info
  repeated AlgorithmInfo algorithms = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "algorithms",
    (gogoproto.moretags) = "yaml:\"algorithms\""
  ];
}

// QueryValidateEnvelopeRequest is the request for validating an envelope
message QueryValidateEnvelopeRequest {
  // Envelope is the encrypted payload envelope to validate
  EncryptedPayloadEnvelope envelope = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "envelope",
    (gogoproto.moretags) = "yaml:\"envelope\""
  ];
}

// QueryValidateEnvelopeResponse is the response for QueryValidateEnvelopeRequest
message QueryValidateEnvelopeResponse {
  // Valid indicates if the envelope is valid
  bool valid = 1 [
    (gogoproto.jsontag) = "valid",
    (gogoproto.moretags) = "yaml:\"valid\""
  ];

  // Error contains the validation error message if not valid
  string error = 2 [
    (gogoproto.jsontag) = "error,omitempty",
    (gogoproto.moretags) = "yaml:\"error\""
  ];

  // RecipientCount is the number of recipients in the envelope
  int32 recipient_count = 3 [
    (gogoproto.jsontag) = "recipient_count",
    (gogoproto.moretags) = "yaml:\"recipient_count\""
  ];

  // Algorithm is the encryption algorithm used
  string algorithm = 4 [
    (gogoproto.jsontag) = "algorithm",
    (gogoproto.moretags) = "yaml:\"algorithm\""
  ];

  // SignatureValid indicates if the sender signature is valid
  bool signature_valid = 5 [
    (gogoproto.jsontag) = "signature_valid",
    (gogoproto.moretags) = "yaml:\"signature_valid\""
  ];

  // AllKeysRegistered indicates if all recipient keys are registered
  bool all_keys_registered = 6 [
    (gogoproto.jsontag) = "all_keys_registered",
    (gogoproto.moretags) = "yaml:\"all_keys_registered\""
  ];

  // MissingKeys is the list of missing key fingerprints
  repeated string missing_keys = 7 [
    (gogoproto.jsontag) = "missing_keys,omitempty",
    (gogoproto.moretags) = "yaml:\"missing_keys\""
  ];
}
